--- a/script/build.gradle
+++ b/script/build.gradle
@@ -7,6 +7,7 @@ version = 'unspecified'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -14,6 +15,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation project(":engine")
+    implementation project(":java")
 }
 
 test {
